# awesome-operates

./: .gitignore  Cargo.toml  LICENSE-APACHE  Makefile  README.md
embed_files/: 404.html
embed_files/swagger/: swagger-initializer.js
examples/embed-swagger/: Cargo.toml
examples/embed-swagger/src/: main.rs
src/: build.rs  cache_db.rs  compress.rs  consts.rs  embed.rs  error.rs  file.rs  graceful.rs  helper.rs  lib.rs  log.rs  manage.rs  openapi.rs  proxy.rs  router.rs  schedule.rs  server.rs  swagger.rs
src/axum/: middlewares.rs  mod.rs  query.rs
src/helper/: execute.rs  format.rs  fs.rs  iter.rs  mod.rs  network.rs  unix.rs  version.rs  windows.rs
src/router/: config.rs  handler.rs  mod.rs  tests.rs
src/test_files/: openapi.json
