[package]
name = "awesome-operates"
version = "0.1.1"
edition = "2021"
categories = ["asynchronous"]
description = "A reposity includs many common use code utils"
keywords = ["axum", "tokio", "systemd"]
authors = ["Gongzhengyang <gongzhengyangfindyourdream@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gongzhengyang/awesome-operates"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = { git = "https://github.com/tokio-rs/axum.git" }
build-data = "0.1"
chrono = "0.4"
hyper = { version = "0.14", features = ["full"] }
mime = "0.3"
regex = "1"
rust-embed = { version = "8", features = ["compression", "debug-embed", "interpolate-folder-path"] }
rust_decimal = { version = "1.32", features = ["serde-float"] }
serde_json = "1"
snafu = "0.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"

