[package]
name = "awesome-operates"
version = "0.1.1"
edition = "2021"
categories = ["asynchronous"]
description = "A reposity includs many common use code utils"
keywords = ["axum", "tokio", "systemd"]
authors = ["Gongzhengyang <gongzhengyangfindyourdream@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gongzhengyang/awesome-operates"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
aide = { git = "https://github.com/tamasfe/aide.git" }
anyhow = "1"
async-compression = { version = "0.4", features = ["tokio"] }
async-trait = "0.1"
axum = "0.7.1"
build-data = "0.1"
chrono = "0.4"
http = "1"
hyper = { version = "1.0.1", features = ["full"] }
mime = "0.3"
once_cell = "1"
regex = "1"
reqwest = { version = "0.11", features = ["rustls-tls", "json"], default-features = false }
rust-embed = { version = "8", features = ["compression", "debug-embed", "interpolate-folder-path"] }
rust_decimal = { version = "1.33", features = ["serde-float"] }
serde_json = "1"
snafu = "0.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["full"] }
tracing = "0.1"
walkdir = "2"
http-body-util = "0.1"
num-traits = "0.2"
cfg-if = "1.0.0"
serde = "1"

[target.'cfg(windows)'.dependencies]
encoding = { git = "https://github.com/lifthrasiir/rust-encoding.git", branch = "master" }