[package]
name = "awesome-operates"
version = "0.1.2"
edition = "2021"
categories = ["asynchronous"]
description = "A reposity includs many common use code utils"
keywords = ["axum", "tokio", "systemd"]
authors = ["Gongzhengyang <gongzhengyangfindyourdream@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gongzhengyang/awesome-operates"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
aide = { version = "0.13", features = ["axum"] }
async-compression = { version = "0.4", features = ["tokio"] }
async-trait = "0.1"
axum = "0.7.2"
build-data = "0.1"
cfg-if = "1.0.0"
chrono = "0.4"
encoding_rs = "0.8.33"
futures-io = "0.3"
http = "1"
http-body-util = "0.1"
hyper = { version = "1.0.1", features = ["full"] }
mime = "0.3"
num-traits = "0.2"
once_cell = "1"
regex = "1"
reqwest = { version = "0.11", features = ["rustls-tls", "json"], default-features = false }
rust-embed = { version = "8", features = ["compression", "debug-embed"] }
rust_decimal = { version = "1.33", features = ["serde-float"] }
schemars = "0.8"
serde = "1"
serde_json = "1"
serde_urlencoded = "0.7"
snafu = "0.8"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
walkdir = "2"
zip = "0.6"
zip-extensions = "0.6"
moka = {version = "0.12", features = ["future"]}

[target.'cfg(unix)'.dependencies]
pnet_datalink = "0.34.0"

[target.'cfg(windows)'.dependencies]
ipconfig = "0.3"

[workspace]
members = [".", "examples/*"]
