[package]
name = "embed-swagger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide = { version = "0.13", features = ["axum"] }
awesome-operates = { path = "../../" }
axum = "0.7.2"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
schemars = "0.8"